CKA/Chapter11_Services/L10ingress/deployment-app2.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: nginx:alpine

        ports:
        - containerPort: 80

        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html

      volumes:
      - name: html
        configMap:
          name: app2-html
