CKA/Chapter11_Services/L10ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-ingress

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /app1(/|$)(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: app1-service

            port:
              number: 80

      - path: /app2(/|$)(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: app2-service

            port:
              number: 80
